Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23256

v8 debugger crashes when stepping into closure

    XMLWordPrintable

Details

    Description

      import QtQuick 2.0
      MouseArea {
          width: 360; height: 360
          onClicked: {
              var f;
              (f = function() { console.log("Height changed:" + height) })
              f();
          }
      }
      
      • set a breakpoint on f();
      • When hit, do a step into
      • App crashes

      Application Output

      Debugging starts
      Starting /home/kkoehne/dev/qt/qt-5-32/qtbase/bin/qmlscene -qmljsdebugger=port:3768,block -I /home/kkoehne/dev/qt/qt-5-32/qtbase/imports /home/kkoehne/dev/tmp/stepintobug/stepintobug.qml
      Qml debugging is enabled. Only use this in a safe environment!
      No platform plugin argument was specified, defaulting to "xcb".
      Successfully connected to display :0.0
      
      Information of screen 346:
        width.........: 1600
        height........: 1200
        depth.........: 24
        white pixel...: ffffff
        black pixel...: 0
      
      Running window manager: Compiz
      QIBusPlatformInputContext: ibus config file '/home/kkoehne/.config/ibus/bus/1862d5aa58cc0c55f69e682300000008-unix-0' does not exist.
      QIBusPlatformInputContext: not connected.
      QDeclarativeDebugServer: Waiting for connection on port 3768...
      QDeclarativeDebugServer: Connection established
      
      
      #
      # Fatal error in /home/kkoehne/dev/qt/qt-5/qtbase/src/3rdparty/v8/src/runtime.cc, line 11364
      # CHECK(nested_scope_chain_.length() == 2) failed
      #
      
      
      ==== Stack trace ============================================
      
      Security context: 0x4c9673c1 <JS Object>#0#
          1: new constructor(aka ScopeDetails) [native mirror.js:1740] (this=0x55f26039 <a ScopeDetails>#1#,a=0x55f255f9 <a FrameMirror>#2#,b=0)
          3: new constructor(aka ScopeMirror) [native mirror.js:1767] (this=0x55f26001 <a ScopeMirror>#3#,a=0x55f255f9 <a FrameMirror>#2#,b=0)
          5: scope [native mirror.js:1574] (this=0x55f255f9 <a FrameMirror>#2#,a=0)
          6: serializeFrame_ [native mirror.js:2389] (this=0x55f25791 <a JSONProtocolSerializer>#4#,a=0x55f255f9 <a FrameMirror>#2#,b=0x55f257e9 <an Object>#5#)
          7: serialize_ [native mirror.js:2147] (this=0x55f25791 <a JSONProtocolSerializer>#4#,mirror=0x55f255f9 <a FrameMirror>#2#,reference=0x4c9080c1 <false>,details=0x4c9080b1 <true>)
          8: serializeValue [native mirror.js:1979] (this=0x55f25791 <a JSONProtocolSerializer>#4#,a=0x55f255f9 <a FrameMirror>#2#)
          9: ValueToProtocolValue_(aka ValueToProtocolValue_) [native debug.js:2583] (this=0x4c908091 <undefined>,a=0x55f255f9 <a FrameMirror>#2#,b=0x55f25791 <a JSONProtocolSerializer>#4#)
         10: ArrayToProtocolArray_(aka ArrayToProtocolArray_) [native debug.js:2564] (this=0x4c908091 <undefined>,a=0x55f255e9 <JS array[2]>#6#,b=0x55f25791 <a JSONProtocolSerializer>#4#)
         11: ValueToProtocolValue_(aka ValueToProtocolValue_) [native debug.js:2585] (this=0x4c908091 <undefined>,a=0x55f255e9 <JS array[2]>#6#,b=0x55f25791 <a JSONProtocolSerializer>#4#)
         12: ObjectToProtocolObject_(aka ObjectToProtocolObject_) [native debug.js:2540] (this=0x4c908091 <undefined>,a=0x55f25735 <an Object>#7#,b=0x55f25791 <a JSONProtocolSerializer>#4#)
         13: toJSONProtocol [native debug.js:1345] (this=0x55f25561 <a ProtocolMessage>#8#)
         14: processDebugJSONRequest [native debug.js:1496] (this=0x55f253f9 <a DebugCommandProcessor>#9#,a=0x55f25471 <String[63]: {"seq":8,"type":"request","command":"backtrace","arguments":{}}>)
         15: processDebugRequest [native debug.js:1272] (this=0x55f253f9 <a DebugCommandProcessor>#9#,a=0x55f25471 <String[63]: {"seq":8,"type":"request","command":"backtrace","arguments":{}}>)
      Security context: 0x4c953add <JS Object>#10#
         20: /* anonymous */ [file:///home/kkoehne/dev/tmp/stepintobug/stepintobug.qml:6] (this=0x4c953b75 <JS Global Object>#11#)
         21: onClicked [file:///home/kkoehne/dev/tmp/stepintobug/stepintobug.qml:7] (this=0x4c953b75 <JS Global Object>#11#)
      
      ==== Details ================================================
      
      Security context: 0x4c9673c1 <JS Object>#0#
      [1]: new constructor(aka ScopeDetails) [native mirror.js:1740] (this=0x55f26039 <a ScopeDetails>#1#,a=0x55f255f9 <a FrameMirror>#2#,b=0) {
        // expression stack (top to bottom)
        [04] : 0
        [03] : 0
        [02] : -269000482
        [01] : 8
        [00] : 0x55f26039 <a ScopeDetails>#1#
      --------- s o u r c e   c o d e ---------
      function ScopeDetails(a,b){?this.break_id_=a.break_id_;?this.details_=%GetScopeDetails(a.break_id_,?a.details_.frameId(),?a.details_.inlinedFrameIndex(),?b);?}
      -----------------------------------------
      }
      
      [3]: new constructor(aka ScopeMirror) [native mirror.js:1767] (this=0x55f26001 <a ScopeMirror>#3#,a=0x55f255f9 <a FrameMirror>#2#,b=0) {
        // expression stack (top to bottom)
        [03] : 0
        [02] : 0x55f255f9 <a FrameMirror>#2#
        [01] : 0x4c96c3c5 <JS Function ScopeDetails>#12#
        [00] : 0x55f26001 <a ScopeMirror>#3#
      --------- s o u r c e   c o d e ---------
      function ScopeMirror(a,b){?%_CallFunction(this,SCOPE_TYPE,Mirror);?this.frame_index_=a.index_;?this.scope_index_=b;?this.details_=new ScopeDetails(a,b);?}
      -----------------------------------------
      }
      
      [5]: scope [native mirror.js:1574] (this=0x55f255f9 <a FrameMirror>#2#,a=0) {
        // expression stack (top to bottom)
        [02] : 0
        [01] : 0x55f255f9 <a FrameMirror>#2#
        [00] : 0x4c96c3e9 <JS Function ScopeMirror>#13#
      --------- s o u r c e   c o d e ---------
      function (a){?return new ScopeMirror(this,a);?}
      -----------------------------------------
      }
      
      [6]: serializeFrame_ [native mirror.js:2389] (this=0x55f25791 <a JSONProtocolSerializer>#4#,a=0x55f255f9 <a FrameMirror>#2#,b=0x55f257e9 <an Object>#5#) {
        // stack-allocated locals
        var i = 0x4c908091 <undefined>
        var d = 0x55f25b19 <JS array[0]>#14#
        var j = 0x4c908091 <undefined>
        var l = 0x4c908091 <undefined>
        var c = 0x55f239c1 <a FunctionMirror>#15#
        var h = 0x4c908091 <undefined>
        var g = 0
        var k = 0x55f25fbd <String[68]:         (f = function() { console.log("Height changed:" + height) })>
        // expression stack (top to bottom)
        [09] : 0
        [08] : 0x55f255f9 <a FrameMirror>#2#
      --------- s o u r c e   c o d e ---------
      function (a,b){?b.index=a.index();?b.receiver=this.serializeReference(a.receiver());?var c=a.func();?b.func=this.serializeReference(c);?if(c.script()){?b.script=this.serializeReference(c.script());?}?b.constructCall=a.isConstructCall();?b.atReturn=a.isAtReturn();?if(a.isAtReturn()){?b.returnValue=this.serial...
      
      -----------------------------------------
      }
      
      [7]: serialize_ [native mirror.js:2147] (this=0x55f25791 <a JSONProtocolSerializer>#4#,mirror=0x55f255f9 <a FrameMirror>#2#,reference=0x4c9080c1 <false>,details=0x4c9080b1 <true>) {
        // stack-allocated locals
        var a = 0x55f257e9 <an Object>#5#
        var d = 0x4c908091 <undefined>
        var c = 0x4c908091 <undefined>
        var b = 0x4c908091 <undefined>
        // expression stack (top to bottom)
        [06] : 0x55f257e9 <an Object>#5#
        [05] : 0x55f255f9 <a FrameMirror>#2#
        [04] : 0x55f25791 <a JSONProtocolSerializer>#4#
      --------- s o u r c e   c o d e ---------
      function (mirror,reference,?details){???if(reference&&?(mirror.isValue()||mirror.isScript()||mirror.isContext())){?if(this.inlineRefs_()&&mirror.isValue()){?return this.serializeReferenceWithDisplayData_(mirror);?}else{?this.add_(mirror);?return{'ref':mirror.handle()};?}?}???var a={};???if(mirror.isValue()||...
      
      -----------------------------------------
      }
      
      [8]: serializeValue [native mirror.js:1979] (this=0x55f25791 <a JSONProtocolSerializer>#4#,a=0x55f255f9 <a FrameMirror>#2#) {
        // stack-allocated locals
        var b = 0x4c908091 <undefined>
        // expression stack (top to bottom)
        [04] : 0x4c9080b1 <true>
        [03] : 0x4c9080c1 <false>
        [02] : 0x55f255f9 <a FrameMirror>#2#
        [01] : 0x55f25791 <a JSONProtocolSerializer>#4#
      --------- s o u r c e   c o d e ---------
      function (a){?var b=this.serialize_(a,false,true);?return b;?}
      -----------------------------------------
      }
      
      [9]: ValueToProtocolValue_(aka ValueToProtocolValue_) [native debug.js:2583] (this=0x4c908091 <undefined>,a=0x55f255f9 <a FrameMirror>#2#,b=0x55f25791 <a JSONProtocolSerializer>#4#) {
        // stack-allocated locals
        var c = 0x4c908091 <undefined>
        // expression stack (top to bottom)
        [02] : 0x55f255f9 <a FrameMirror>#2#
        [01] : 0x55f25791 <a JSONProtocolSerializer>#4#
      --------- s o u r c e   c o d e ---------
      function ValueToProtocolValue_(a,b){??var c;?switch(typeof a){?case'object':?if(a instanceof Mirror){?c=b.serializeValue(a);?}else if((%_IsArray(a))){?c=ArrayToProtocolArray_(a,b);?}else{?c=ObjectToProtocolObject_(a,b);?}?break;??case'boolean':?case'string':?case'number':?c=a;?break??default:?c=null;?}?return c;?}
      -----------------------------------------
      }
      
      [10]: ArrayToProtocolArray_(aka ArrayToProtocolArray_) [native debug.js:2564] (this=0x4c908091 <undefined>,a=0x55f255e9 <JS array[2]>#6#,b=0x55f25791 <a JSONProtocolSerializer>#4#) {
        // stack-allocated locals
        var c = 0x55f257d9 <JS array[0]>#16#
        var d = 0
        // expression stack (top to bottom)
        [05] : 0x55f25791 <a JSONProtocolSerializer>#4#
        [04] : 0x55f255f9 <a FrameMirror>#2#
        [03] : 0x4c908091 <undefined>
        [02] : 0x55f257d9 <JS array[0]>#16#
      --------- s o u r c e   c o d e ---------
      function ArrayToProtocolArray_(a,b){?var c=[];?for(var d=0;d<a.length;d++){?c.push(ValueToProtocolValue_(a[d],b));?}?return c;?}
      -----------------------------------------
      }
      
      [11]: ValueToProtocolValue_(aka ValueToProtocolValue_) [native debug.js:2585] (this=0x4c908091 <undefined>,a=0x55f255e9 <JS array[2]>#6#,b=0x55f25791 <a JSONProtocolSerializer>#4#) {
        // stack-allocated locals
        var c = 0x4c908091 <undefined>
        // expression stack (top to bottom)
        [03] : 0x55f25791 <a JSONProtocolSerializer>#4#
        [02] : 0x55f255e9 <JS array[2]>#6#
        [01] : 0x4c908091 <undefined>
      --------- s o u r c e   c o d e ---------
      function ValueToProtocolValue_(a,b){??var c;?switch(typeof a){?case'object':?if(a instanceof Mirror){?c=b.serializeValue(a);?}else if((%_IsArray(a))){?c=ArrayToProtocolArray_(a,b);?}else{?c=ObjectToProtocolObject_(a,b);?}?break;??case'boolean':?case'string':?case'number':?c=a;?break??default:?c=null;?}?return c;?}
      -----------------------------------------
      }
      
      [12]: ObjectToProtocolObject_(aka ObjectToProtocolObject_) [native debug.js:2540] (this=0x4c908091 <undefined>,a=0x55f25735 <an Object>#7#,b=0x55f25791 <a JSONProtocolSerializer>#4#) {
        // stack-allocated locals
        var d = 0x5b533491 <String[6]: frames>
        var c = 0x55f257b9 <an Object>#17#
        var g = 2
        // expression stack (top to bottom)
        [10] : 0x55f25791 <a JSONProtocolSerializer>#4#
        [09] : 0x55f255e9 <JS array[2]>#6#
        [08] : 0x4c908091 <undefined>
        [07] : 3
        [06] : 4
        [05] : 0x55f1189d <FixedArray[4]>#18#
        [04] : 0x3ef10b81 <Map(elements=1)>#19#
        [03] : 0x55f25735 <an Object>#7#
      --------- s o u r c e   c o d e ---------
      function ObjectToProtocolObject_(a,b){?var c={};?for(var d in a){??if(typeof d=='string'){??var g=ValueToProtocolValue_(a[d],?b);??if(!(typeof(g)==='undefined')){?c[d]=g;?}?}?}??return c;?}
      -----------------------------------------
      }
      
      [13]: toJSONProtocol [native debug.js:1345] (this=0x55f25561 <a ProtocolMessage>#8#) {
        // stack-allocated locals
        var c = 0x55f25791 <a JSONProtocolSerializer>#4#
        var a = 0x55f25751 <an Object>#20#
        var b = 0x4c908091 <undefined>
        var d = 0x4c908091 <undefined>
        // expression stack (top to bottom)
        [06] : 0x55f25791 <a JSONProtocolSerializer>#4#
        [05] : 0x55f25735 <an Object>#7#
        [04] : 0x4c908091 <undefined>
      --------- s o u r c e   c o d e ---------
      function (){??var a={};?a.seq=this.seq;?if(this.request_seq){?a.request_seq=this.request_seq;?}?a.type=this.type;?if(this.event){?a.event=this.event;?}?if(this.command){?a.command=this.command;?}?if(this.success){?a.success=this.success;?}else{?a.success=false;?}?if(this.body){??var b;?var c=MakeMirrorSerial...
      
      -----------------------------------------
      }
      
      [14]: processDebugJSONRequest [native debug.js:1496] (this=0x55f253f9 <a DebugCommandProcessor>#9#,a=0x55f25471 <String[63]: {"seq":8,"type":"request","command":"backtrace","arguments":{}}>) {
        // stack-allocated locals
        var d = 0x55f25555 <an Object>#21#
        // heap-allocated locals
        var c = 0x55f25561 <a ProtocolMessage>#8#
        var b = 0x55f254fd <an Object>#22#
        // expression stack (top to bottom)
        [11] : 0x55f25561 <a ProtocolMessage>#8#
      --------- s o u r c e   c o d e ---------
      function (a){?var b;?var c;?try{?try{??b=JSON.parse(a);???c=this.createResponse(b);??if(!b.type){?throw new Error('Type not specified');?}??if(b.type!='request'){?throw new Error("Illegal type '"+b.type+"' in request");?}??if(!b.command){?throw new Error('Command not specified');?}??if(b.arguments){?var d=b....
      
      -----------------------------------------
      }
      
      [15]: processDebugRequest [native debug.js:1272] (this=0x55f253f9 <a DebugCommandProcessor>#9#,a=0x55f25471 <String[63]: {"seq":8,"type":"request","command":"backtrace","arguments":{}}>) {
        // expression stack (top to bottom)
        [01] : 0x55f25471 <String[63]: {"seq":8,"type":"request","command":"backtrace","arguments":{}}>
        [00] : 0x55f253f9 <a DebugCommandProcessor>#9#
      --------- s o u r c e   c o d e ---------
      function (a){?return this.processDebugJSONRequest(a);?}
      -----------------------------------------
      }
      
      Security context: 0x4c953add <JS Object>#10#
      [20]: /* anonymous */ [file:///home/kkoehne/dev/tmp/stepintobug/stepintobug.qml:6] (this=0x4c953b75 <JS Global Object>#11#) {
      --------- s o u r c e   c o d e ---------
      function () { console.log("Height changed:" + height) }
      -----------------------------------------
      }
      
      [21]: onClicked [file:///home/kkoehne/dev/tmp/stepintobug/stepintobug.qml:7] (this=0x4c953b75 <JS Global Object>#11#) {
        // stack-allocated locals
        var f = 0x55f0c0b1 <JS Function>#23#
        // expression stack (top to bottom)
        [03] : 0x4c953b75 <JS Global Object>#11#
        [02] : 0x55f0c0b1 <JS Function>#23#
        [01] : 0x55f0c08d <JS Function onClicked>#24#
      --------- s o u r c e   c o d e ---------
      function onClicked() { {?        var f;?        (f = function() { console.log("Height changed:" + height) })?        f();?    } }
      -----------------------------------------
      }
      
      ==== Key         ============================================
      
       #0# 0x4c9673c1: 0x4c9673c1 <JS Object>
       #1# 0x55f26039: 0x55f26039 <a ScopeDetails>
               break_id_: 8
       #2# 0x55f255f9: 0x55f255f9 <a FrameMirror>
                  index_: 0
                   type_: 0x5b519859 <String[5]: frame>
                details_: 0x55f25615 <a FrameDetails>#25#
               break_id_: 8
       #3# 0x55f26001: 0x55f26001 <a ScopeMirror>
                   type_: 0x5b5198dd <String[5]: scope>
            scope_index_: 0
            frame_index_: 0
       #4# 0x55f25791: 0x55f25791 <a JSONProtocolSerializer>
                details_: 0x4c9080b1 <true>
                mirrors_: 0x55f257a9 <JS array[3]>#26#
                options_: 0x4c908091 <undefined>
       #5# 0x55f257e9: 0x55f257e9 <an Object>
                position: 67
                  scopes: 0x55f25fe1 <JS array[0]>#27#
               arguments: 0x55f25ae1 <JS array[0]>#28#
           constructCall: 0x4c9080c1 <false>
                  locals: 0x55f25b19 <JS array[0]>#14#
                   index: 0
                  column: 26
          sourceLineText: 0x55f25fbd <String[68]:         (f = function() { console.log("Height changed:" + height) })>
           debuggerFrame: 0x4c9080c1 <false>
                atReturn: 0x4c9080c1 <false>
                  script: 0x55f25a65 <an Object>#29#
                receiver: 0x55f2592d <an Object>#30#
                    type: 0x5b519859 <String[5]: frame>
                    line: 5
                    func: 0x55f25995 <an Object>#31#
       #6# 0x55f255e9: 0x55f255e9 <JS array[2]>
                       0: 0x55f255f9 <a FrameMirror>#2#
                       1: 0x55f256b1 <a FrameMirror>#32#
       #7# 0x55f25735: 0x55f25735 <an Object>
             totalFrames: 2
                  frames: 0x55f255e9 <JS array[2]>#6#
               fromFrame: 0
                 toFrame: 2
       #8# 0x55f25561: 0x55f25561 <a ProtocolMessage>
                    body: 0x55f25735 <an Object>#7#
                     seq: 11
                 command: 0x55f25521 <String[9]: backtrace>
                 running: 0x4c9080c1 <false>
             request_seq: 8
                    type: 0x5b51dcf1 <String[8]: response>
                 success: 0x4c9080b1 <true>
       #9# 0x55f253f9: 0x55f253f9 <a DebugCommandProcessor>
             exec_state_: 0x55f23871 <an ExecutionState>#33#
                running_: 0x4c9080c1 <false>
       #10# 0x4c953add: 0x4c953add <JS Object>
       #11# 0x4c953b75: 0x4c953b75 <JS Global Object>
       #12# 0x4c96c3c5: 0x4c96c3c5 <JS Function ScopeDetails>
       #13# 0x4c96c3e9: 0x4c96c3e9 <JS Function ScopeMirror>
                  super_: 0x4c984c25 <an Object>#34#
       #14# 0x55f25b19: 0x55f25b19 <JS array[0]>
       #15# 0x55f239c1: 0x55f239c1 <a FunctionMirror>
                   type_: 0x5b50c331 <String[8]: function>
               resolved_: 0x4c9080b1 <true>
                  value_: 0x55f0c0b1 <JS Function>#23#
                 handle_: 0
       #16# 0x55f257d9: 0x55f257d9 <JS array[0]>
       #17# 0x55f257b9: 0x55f257b9 <an Object>
             totalFrames: 2
               fromFrame: 0
                 toFrame: 2
       #18# 0x55f1189d: 0x55f1189d <FixedArray[4]>
                       0: 0x5b5333fd <String[9]: fromFrame>
                       1: 0x5b533419 <String[7]: toFrame>
                       2: 0x5b5333e1 <String[11]: totalFrames>
                       3: 0x5b533491 <String[6]: frames>
       #19# 0x3ef10b81: 0x3ef10b81 <Map(elements=1)>
       #20# 0x55f25751: 0x55f25751 <an Object>
                     seq: 11
                 command: 0x55f25521 <String[9]: backtrace>
             request_seq: 8
                    type: 0x5b51dcf1 <String[8]: response>
                 success: 0x4c9080b1 <true>
       #21# 0x55f25555: 0x55f25555 <an Object>
       #22# 0x55f254fd: 0x55f254fd <an Object>
               arguments: 0x55f25555 <an Object>#21#
                     seq: 8
                 command: 0x55f25521 <String[9]: backtrace>
                    type: 0x55f25509 <String[7]: request>
       #23# 0x55f0c0b1: 0x55f0c0b1 <JS Function>
       #24# 0x55f0c08d: 0x55f0c08d <JS Function onClicked>
       #25# 0x55f25615: 0x55f25615 <a FrameDetails>
                details_: 0x55f25655 <JS array[9]>#35#
               break_id_: 8
       #26# 0x55f257a9: 0x55f257a9 <JS array[3]>
                       0: 0x55f23a55 <an ObjectMirror>#36#
                       1: 0x55f239c1 <a FunctionMirror>#15#
                       2: 0x55f24291 <a ScriptMirror>#37#
       #27# 0x55f25fe1: 0x55f25fe1 <JS array[0]>
       #28# 0x55f25ae1: 0x55f25ae1 <JS array[0]>
       #29# 0x55f25a65: 0x55f25a65 <an Object>
                     ref: 7
       #30# 0x55f2592d: 0x55f2592d <an Object>
                     ref: 1
       #31# 0x55f25995: 0x55f25995 <an Object>
                     ref: 0
       #32# 0x55f256b1: 0x55f256b1 <a FrameMirror>
                  index_: 1
                   type_: 0x5b519859 <String[5]: frame>
                details_: 0x55f256cd <a FrameDetails>#38#
               break_id_: 8
       #33# 0x55f23871: 0x55f23871 <an ExecutionState>
                break_id: 8
          selected_frame: 0
       #34# 0x4c984c25: 0x4c984c25 <an Object>
       #35# 0x55f25655: 0x55f25655 <JS array[9]>
                       0: -269000482
                       1: 0x4c953b75 <JS Global Object>#11#
                       2: 0x55f0c0b1 <JS Function>#23#
                       3: 0
                       4: 0
                       5: 67
                       6: 0x4c9080c1 <false>
                       7: 0x4c9080c1 <false>
                       8: 0
       #36# 0x55f23a55: 0x55f23a55 <an ObjectMirror>
                   type_: 0x5b50c49d <String[6]: object>
                  value_: 0x4c953b75 <JS Global Object>#11#
                 handle_: 1
       #37# 0x55f24291: 0x55f24291 <a ScriptMirror>
                   type_: 0x5b50f4a1 <String[6]: script>
                 script_: 0x4c98a959 <a Script value = 0x4c93bf09 <Script>>#39#
                 handle_: 7
                context_: 0x55f242c5 <a ContextMirror>#40#
       #38# 0x55f256cd: 0x55f256cd <a FrameDetails>
                details_: 0x55f25725 <JS array[11]>#41#
               break_id_: 8
       #39# 0x4c98a959: 0x4c98a959 <a Script value = 0x4c93bf09 <Script>>
                 value(): 0x4c93bf09 <Script>#42#
      sourceColumnStart_: 0x4c98a5c5 <JS array[7]>#43#
       #40# 0x55f242c5: 0x55f242c5 <a ContextMirror>
                   type_: 0x5b5198a9 <String[7]: context>
                   data_: 0x4c908091 <undefined>
                 handle_: 6
       #41# 0x55f25725: 0x55f25725 <JS array[11]>
                       0: -269000474
                       1: 0x4c953b75 <JS Global Object>#11#
                       2: 0x55f0c08d <JS Function onClicked>#24#
                       3: 0
                       4: 1
                       5: 118
                       6: 0x4c9080c1 <false>
                       7: 0x4c9080c1 <false>
                       8: 0
                       9: 0x5b50d13d <String[1]: f>
                        ...
       #42# 0x4c93bf09: 0x4c93bf09 <Script>
       #43# 0x4c98a5c5: 0x4c98a5c5 <JS array[7]>
                       6: 8
      =====================
      
      The program has unexpectedly finished.
      Debugging has finished
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ajana Aurindam Jana
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes