[V8] Fix crash when querying for scopes

For function code, the compilation info was incorrectly
marked as global if the shared_info had qml_mode set.
The ASSERT for the length of nested scopes failed when
querying for scopes and hence the crash. This fix sets the
qml_mode for function code correctly.

Fixes https://bugreports.qt.nokia.com/browse/QTBUG-23256

This patch should be squashed into
-- 2fe857938c3d1683df88133582bc3e7736264b10 [V8] Introduce a
QML compilation mode -- in the next v8 rebase as this code
only improves code in that patch.

Change-Id: I137b0e88dba81ff2ff46876faa883edb9dd0e4a9
Sanity-Review: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Kent Hansen <kent.hansen@nokia.com>